--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,6 @@
 /* Shared Design */
 
 
-* {
-    padding: 0;
-    margin: 0;
-
-}
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Oswald', sans-serif;
@@ -21,6 +15,16 @@ body {
     border-radius: 5px;
     border: 0;
     color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+}
+
+.btn-secondary {
+    border-radius: 5px;
+    border: 1px solid #FD6E0A;
+    color: #FD6E0A;
+    background-color: white;
     font-size: 20px;
     font-weight: 700;
     padding: 15px 35px;
@@ -61,21 +65,57 @@ nav a {
 
 .header {
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.banner .profile-pic{
+.banner .profile-pic {
     height: 600px;
     width: 500px;
 }
 
-.banner-grets {}
+.banner-grets {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
 
-.banner-title {}
+.banner-title {
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
 
+
+/* About Section Style */
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+
+.about-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.about-desc {
+    color:#757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
