--- a/styles/style.css
+++ b/styles/style.css
@@ -119,3 +119,17 @@ nav a {
     font-size: 18px;
     font-weight: 400;
 }
+
+.about-info-container{
+    display: flex;
+    justify-content: space-evenly;
+}
+.about-inf{
+    text-align: center;
+}
+/* Main section design */
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
