--- a/styles/style.css
+++ b/styles/style.css
@@ -133,3 +133,16 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+
+/* What i do */
+
+#what-desc{
+    padding: 30px 150px;
+}
+
+.what-i-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
