--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Oswald', sans-serif;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 .text-primary {
     color: #FD6E0A;
 }
@@ -70,6 +74,7 @@ nav a {
     background-position: bottom right;
 }
 
+
 .banner {
     padding: 30px 30px 0px 150px;
     display: flex;
@@ -96,6 +101,13 @@ nav a {
     margin-bottom: 20px;
 }
 
+.banner-desc {
+    color: #757575;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
 
 /* About Section Style */
 
@@ -114,35 +126,80 @@ nav a {
 }
 
 .about-desc {
-    color:#757575;
+    color: #757575;
     text-align: center;
     font-size: 18px;
     font-weight: 400;
 }
 
-.about-info-container{
+.about-info-container {
     display: flex;
     justify-content: space-evenly;
 }
-.about-inf{
+
+.about-inf {
     text-align: center;
 }
+
 /* Main section design */
 
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
 
 /* What i do */
 
-#what-desc{
+#what-desc {
     padding: 30px 150px;
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
 
-.what-i-title{
+.what-i-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+    margin-bottom: 10px;
+}
+
+.skill {
+    padding: 30px;
+
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-desc {
+    color: #757575;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.resume-section {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.resume-title {
+    color: #474747;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
