--- a/styles/style.css
+++ b/styles/style.css
@@ -230,7 +230,7 @@ main {
 }
 
 .resume-desc {
-    color:#757575;
+    color: #757575;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -238,7 +238,32 @@ main {
 }
 
 
-.download-cv{
+.download-cv {
     text-align: center;
     margin-top: 50px;
+}
+
+
+.footer-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.footer-desc {
+    color: #474747;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+footer{
+    display: flex;
+    background-color:#FFF8F3;
+    padding: 130px 230px;
+    margin-top: 120px;
 }
