--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,4 @@
 /* Shared Design */
-* {
-    padding: 0;
-    margin: 0;
-}
 
 body {
     font-family: 'Open Sans', sans-serif;
@@ -72,9 +68,9 @@ nav a {
 
 .header {
     background-color: #FFF8F3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'),url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right,top left;
 }
 
 
